--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,49 @@
-﻿body
+﻿//
+// Fonts.
+//
+@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700')
+
+//
+// Variables.
+//
+common_font = "PT Serif", Helvetica, Arial, sans-serif
+
+//
+// Main stylesheet.
+//
+html,body
+  padding: 0
+  margin: 0
+body
   padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font: 14px common_font
 a
   color: #00B7FF
+.desc
+  font-size: 1.1em
+  margin-top: -20px
+  padding-bottom: 40px
+  color: grey
+.log
+  font-size: 1.2em
+  display: table
+  width: 100%
+  table-layout: fixed
+  overflow: hidden
+  .line
+      display: table-row
+      width: 100%
+      line-height: 2em
+      div
+        display: table-cell
+        white-space: nowrap
+      .date
+        width: 175px
+      .author
+        width: 350px
+      .message
+        width: 99%
+        white-space: wrap
+        font-weight: bold
+      .hash
+        width: 100px
