--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 ﻿doctype html
 html
   head
-    title= title
+    meta(charset='utf-8')
+    title title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
