--- a/views/index.jade
+++ b/views/index.jade
@@ -1,18 +1,26 @@
 ﻿extends layout
 
 block content
-  each repo in repositories
-    h1 #{repo.name}
+  each repo, repo_index in repositories
+    .repo
+      header
+        .url url: 
+          code #{repo.url}
+        h1 #{repo.name}
+        .desc #{repo.description} (#{repo.log.length} commits)
+      
+      .log
+        each commit in repo.log.slice(0, 10)
+          .line
+              .date #{commit.date.toLocaleString()}
+              .author #{commit.author.name} &lt;#{commit.author.email}&gt;
+              .message #{commit.message}
+              .hash #{commit.commit.substring(0, 10)}
+      if repo.log.length > 10
+        p.more ...and #{repo.log.length - 10} more commits
 
-    .desc #{repo.description}
-    
-    .log
-      each commit in repo.log
-        .line
-            .date #{commit.date.toLocaleString()}
-            .author #{commit.author.name} &lt;#{commit.author.email}&gt;
-            .message #{commit.message}
-            .hash #{commit.commit.substring(0, 10)}
+      if repo.isBroken
+        p(style='color:red') repo is broken
 
-    if repo.isBroken
-      p(style='color:red') repo is broken
+    if repo_index < repositories.length - 1
+      hr.repoend
