--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -21,6 +21,7 @@ body
 a
   color: #00B7FF
 .repo
+  margin-bottom: 80px
   header
     h1
       padding-left: 42px
@@ -30,6 +31,7 @@ a
     .url
       float: right
       margin-top: 15px
+      color: grey
     .desc
       font-size: 1.1em
       margin-top: -20px
