--- a/views/index.jade
+++ b/views/index.jade
@@ -22,5 +22,5 @@ block content
       if repo.isBroken
         p(style='color:red') repo is broken
 
-    if repo_index < repositories.length - 1
-      hr.repoend
+//    if repo_index < repositories.length - 1
+//      hr.repoend
