--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -74,3 +74,10 @@ a
   border-top: 1px solid #333
   color: #333
   text-align: center
+.feed
+  font-size: 1.2em
+  .activity
+    line-height: 1.5em
+    .line
+      .hash
+        font-family: monospace_font
